BMSSimplificationEclipseWS/EUFULL-Org-Backup/src/objects/Meeting_Document_Template__c.object
<CustomObject>
    <description>Template for documents required for Meetings</description>
    <fields>
        <fullName>Activity_Type_BMS_EMEA__c</fullName>
        <label>Activity Type</label>
        <picklist>
            <picklistValues>
                <fullName>Speaker Meeting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>P2P Discussion</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Standard Representative Presentation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other Representative Presentation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sponsorship of local meetings (stand)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sponsorship of Hospital meetings (stand)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sponsorship of HCPs to local Congress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Advisory Boards</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DA Group Meetings with External Speaker</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DA MSM Presentation with MSM as Speaker</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other Non Promotional Meetings in response to an expressed need</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other External Meetings in response to an expressed need</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Country_Specific_BMS_EMEA__c</fullName>
        <description>VPRO Nov 2013: field used to have country-specific required fields as part of the FFM Module.</description>
        <label>Country Specific</label>
        <picklist>
            <picklistValues>
                <fullName>Austria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belgium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Czech Republic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Denmark</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Finland</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Germany</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Greece</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hungary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ireland</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Netherlands</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Norway</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Poland</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Portugal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Romania</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Spain</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sweden</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Switzerland</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>United Kingdom</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>France</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>External_ID_BMS_EMEA__c</fullName>
        <description>VPRO Nov 2013: external ID of the record</description>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>150</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>FFM_Step_BMS_EMEA__c</fullName>
        <description>VPRO Nov 2013: field used to have different required fields based on the FFM Step</description>
        <label>FFM Step</label>
        <picklist>
            <picklistValues>
                <fullName>Master File</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Meeting Planning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Meeting Post-Execution</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Is_Required__c</fullName>
        <defaultValue>true</defaultValue>
        <description>True if the document is required when closing out the meeting</description>
        <label>Is Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Meeting_Type__c</fullName>
        <label>Meeting Type</label>
        <picklist>
            <picklistValues>
                <fullName>Corporate Support Event</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OLA Event</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lunch and Learn</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Accredited</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Meeting Document Template</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>FFM_Step_BMS_EMEA__c</columns>
        <columns>Country_Specific_BMS_EMEA__c</columns>
        <columns>Activity_Type_BMS_EMEA__c</columns>
        <columns>Is_Required__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>TT</fullName>
        <columns>NAME</columns>
        <columns>FFM_Step_BMS_EMEA__c</columns>
        <columns>Country_Specific_BMS_EMEA__c</columns>
        <columns>Activity_Type_BMS_EMEA__c</columns>
        <columns>Is_Required__c</columns>
        <columns>External_ID_BMS_EMEA__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Country_Specific_BMS_EMEA__c</field>
            <operation>equals</operation>
            <value>Hungary,Czech Republic</value>
        </filters>
        <label>TT</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Meeting Document Template Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Meeting Document Templates</pluralLabel>
    <recordTypes>
        <fullName>BMS_EMEA_Document_Templates_BMS_EMEA</fullName>
        <active>true</active>
        <description>VPRO Nov 2013: Document Template specific to EMEA</description>
        <label>BMS - EMEA - Document Templates</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>